crates/oxc_css_parser/tests/error/scss/selectors/empty-placeholder.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect one of `<ident>` or `#{`, but found `{`
  ┌─ empty-placeholder.scss:1:3
  │
1 │ % {
  │   ^


